fix edit button clipping

--- a/resources/assets/less/bem/beatmapset-info.less
+++ b/resources/assets/less/bem/beatmapset-info.less
@@ -35,7 +35,7 @@
 
     &--description {
       flex: 1;
-      overflow-y: auto;
+      min-width: 0;
     }
 
     &--meta {
@@ -52,12 +52,17 @@
     }
   }
 
+  // inner-content to fix overflow hidden of
+  // edit button
+  &__box-content {
+    height: 100%;
+    overflow-y: auto;
+  }
+
   &__edit-description {
     position: absolute;
-    // overflow: hidden of the block next to the description clips ths button's
-    // drop shadow.
     top: 10px;
-    right: 10px;
+    right: -10px;
 
     opacity: 0;
     transition: opacity 120ms;
